jobber-k8s/minikube/jobber-kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-kibana
  template:
    metadata:
      labels:
        app: jobber-kibana
    spec:
      containers:
        - name: jobber-kibana
          image: docker.elastic.co/kibana/kibana:8.11.0
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
          - name: jobber-kibana
            containerPort: 5601
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
